# weasel

./: .gitignore  run.py
weasel_client/: .eslintrc.json  jest.config.js  package.json  tsconfig.json
weasel_client/src/: config.ts  weasel.ts
weasel_client/test/: weasel.test.js  weasel.test.ts
weasel_server/: pyproject.toml
weasel_server/src/weasel/: weasel.py
weasel_server/test/: test_weasel.py
